--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   background-color: #282c34;
   color: white;
@@ -11,7 +11,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -49,7 +49,26 @@ nav li a {
 
 .nav-active,
 .active {
-  color: grey;
+  color: #61dbfb !important;
   transition: all 0.3s ease-out;
+  background: white;
+  font-weight: bold;
 }
 
+.lazy-layout-ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.lazy-layout-ul li {
+  float: left;
+  margin: 5px 10px;
+}
+
+.lazy-layout-ul li a {
+  color: white;
+  font-size: 1.2rem;
+  padding: 2px 10px;
+  text-decoration: none;
+}
